Fix profile alignment and CI notifications

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -62,6 +62,7 @@ ul.task-list input[type="checkbox"] {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
+    text-align: center;
 
     p {
       display: inline-block;
@@ -81,6 +82,7 @@ ul.task-list input[type="checkbox"] {
 @media (min-width: 576px) {
   .profile {
     width: 30%;
+    margin-top: -1.25rem;
 
     .address {
       p {
